1:更新ST编辑功能

--- a/.trae/documents/跨平台 IEC 61131-3 PLC 程序编辑器实现方案.md
+++ b/.trae/documents/跨平台 IEC 61131-3 PLC 程序编辑器实现方案.md
@@ -85,3 +85,13 @@
 - 初始化仓库与三层骨架（前端/后端/壳），完成 M1 范围。
 - 明确优先互导目标（例如先对齐 CODESYS/TwinCAT 的 XML）。
 - 列出必需标准库块与示例工程，进入实现与测试。
+ - 建立最小可用后端：`Plc.Server` Minimal API + SignalR，提供项目/文件 CRUD、编译入口与仿真控制。
+ - 初始化语言与 IR：`Plc.Language.St` ANTLR4 语法骨架、`Plc.Language.Fbd` 模型与验证占位，定义基础 IR/类型集合。
+ - 前端搭建：Vite + TS 初始化，引入 Monaco/React Flow；实现项目树、ST/FBD 编辑器容器与后端联通（保存/编译/诊断）。
+ - Electron 壳：启动后端进程管理、打包配置与日志；预留自动更新。
+ - LSP 原型：实现 ST 的诊断/跳转定义/悬浮的最小能力，并在前端接入。
+ - PLCopen 导出：完成 POU + 变量的导出与 XSD 校验流水线，增加冒烟用例。
+ - CI/CD 初始化：配置跨平台构建与测试矩阵（Windows/macOS/Linux），接入 xUnit/Vitest 套件。
+ - 兼容性试点：与 CODESYS/TwinCAT 的 XML 互导金样比对，记录差异与兼容策略。
+ - M1 交付清单：前端（Monaco 高亮、React Flow 原型）、后端（最小 AST/IR、API 通路）、PLCopen（最小导出）、测试（基础套件）。
+ - 推进机制：每周演示与冒烟，问题清单/燃尽图，风险项跟踪与缓解。
