1:更新部分功能，详见需求进度

--- a/.trae/documents/跨平台 IEC 61131-3 PLC 程序编辑器实现方案.md
+++ b/.trae/documents/跨平台 IEC 61131-3 PLC 程序编辑器实现方案.md
@@ -95,3 +95,53 @@
  - 兼容性试点：与 CODESYS/TwinCAT 的 XML 互导金样比对，记录差异与兼容策略。
  - M1 交付清单：前端（Monaco 高亮、React Flow 原型）、后端（最小 AST/IR、API 通路）、PLCopen（最小导出）、测试（基础套件）。
  - 推进机制：每周演示与冒烟，问题清单/燃尽图，风险项跟踪与缓解。
+
+## 当前完成度评估
+- 框架骨架（M1）
+  - 后端 Minimal API、CORS、基本路由与仿真服务：完成（≈100%）。
+  - ST 解析与编译接口：最小可用，含变量域/行号、未声明引用检查（≈80%）。
+  - FBD 画布与持久化：节点/连线/撤销重做/变量绑定与保存加载（≈80%）。
+  - PLCopen XML 导出/导入：POU/工程导出、FBD 网络导出/导入基础流程（≈70%）。
+  - 前端 ST 编辑器：高亮、编译诊断标记、悬浮提示、跳转/重命名/查找引用（≈85%）。
+  - 构建面板：编辑器与当前 POU 编译、工程编译汇总与导出（≈70%）。
+- 能力增强（M2）
+  - ST 类型规则与更完整语法（控制流/表达式/调用）：进行中（≈40%）。
+  - FBD 合法性与调度完善（端口类型推断/反馈环规范）：进行中（≈50%）。
+  - 仿真运行时：基础变量快照/周期定时，未接入 FBD/POU 执行图（≈30%）。
+  - PLCopen XML 导入与 XSD 校验：导出已覆盖主路径，导入与校验需要补强（≈50%）。
+- LSP 能力（M3）
+  - 跳转定义/查找引用/重命名：原型完成（≈70%），需作用域/语义精度提升。
+  - 智能补全/签名/诊断统一：未开始或初步（≈20%）。
+- 交付与工程化
+  - Electron 打包与自包含 .NET：未接入（≈10%）。
+  - CI/CD（多平台构建/测试矩阵）：未接入（≈10%）。
+
+## 架构风格与代码设计模式（新增要求）
+- 后端架构风格
+  - 分层/整洁架构：`Domain`（语言/IR/编译）、`Application`（用例服务：项目/编译/仿真）、`Infrastructure`（ASP.NET 路由、存储、XML 库）。
+  - 端口-适配器（Hexagonal）：对外接口（HTTP/SignalR/LSP）通过端口抽象，XML/存储/仿真设备作为适配器实现，便于替换与扩展。
+  - CQRS 轻量化：读（查询）与写（命令）在 Minimal API 层分离，后续可接入事件流与审计。
+  - 依赖反转：`Application` 依赖接口，`Infrastructure` 注入实现；统一使用 DI 配置生命周期。
+- 前端架构风格
+  - 以功能域组织：`features/st`、`features/fbd`、`features/pou`、`features/build` 分域，减少耦合。
+  - 状态管理：组件内局部 `useState` 与远端数据请求分离；后续引入轻量状态容器（如 Zustand）用于跨功能共享。
+  - UI/服务分层：视图组件（UI）与服务（HTTP/LSP 访问）、模型（FBD/ST 结构）拆分。
+- 关键设计模式
+  - 解析与编译：`Visitor`（AST/IR 遍历）、`Builder`（FBD/ST→PLCopen 构建）、`Strategy`（类型规则与校验策略）、`Factory`（节点/端口/块创建）。
+  - LSP 原型：`Command`（重命名/跳转操作封装）、`Facade`（前端统一调用后端 LSP 端点）。
+  - FBD 编辑器：`Command`（撤销/重做）、`Observer`（画布变更与自动保存）、`Adapter`（前端节点数据到后端 PLCopen 序列化）。
+  - 仿真运行：`State Machine`（周期驱动与块状态）、`Observer`（变量快照推送）、`Strategy`（块执行逻辑）。
+  - 存储与互导：`Repository`（工作区/POU/变量持久化抽象）、`Adapter`（供应商扩展 XML 命名空间）。
+- 横切关注点
+  - 日志：统一结构化日志（后端 `ILogger`，前端控制台分级），记录编译/导入/导出/仿真事件。
+  - 错误与诊断：后端将语义/类型/拓扑诊断标准化（severity/code/message/range），前端统一渲染与导航。
+  - 配置：端口/路径/特性开关集中管理，避免散落常量。
+  - 测试：xUnit（解析/类型/编译/仿真）、Vitest（组件/交互）；增加金样测试（XML 导入/导出不变性）。
+  - 安全：避免日志泄露用户工程内容与路径；持久化文件路径白名单化与规范化。
+
+## 近期落地建议
+- 扩展 ST 解析覆盖与类型规则，完善 LSP 语义精度（同域/同块约束）。
+- FBD 合法性检查与执行拓扑的标准化输出，接入仿真运行时。
+- 构建面板统一“问题列表”，支持跳转到 ST/FBD 具体位置。
+- 接入 XSD 校验与互导金样比对，持续修正兼容性差异。
+- 引入轻量状态容器与服务抽象，降低前端跨模块耦合。
